/dor/reindex_from_cocina can parse druid from json, remove redundant druid from URL path
